# art-style-classifier

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  База знаний проекта Art Style Classifier (Handover).md
backend/: .env.example  README.md  docker-compose.yml  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0002_prediction_feedback.py
backend/docs/: admin-api-integration.md  training-pipeline-contract.md
backend/scripts/: seed_defaults.py  smoke_registered_model.py
backend/src/artstyle_backend/: domain.py  main.py
backend/src/artstyle_backend/api/: deps.py  router.py
backend/src/artstyle_backend/api/routes/: admin.py  tasks.py
backend/src/artstyle_backend/core/: config.py  database.py
backend/src/artstyle_backend/data/: styles.seed.json
backend/src/artstyle_backend/db/: __init__.py  models.py
backend/src/artstyle_backend/ml/: contracts.py  internal_stub.py  loader.py
backend/src/artstyle_backend/ml_model/: inference.py  retrain_from_feedback.py
backend/src/artstyle_backend/ml_model/model_bundle/: label_encoder_v_final_top18_contemporary_merged_v1_1778096165.joblib  label_encoder_v_final_top20_clsmean_noise001_smooth010_inv_sqrt_v2_1777663786.joblib  (+2 more)
backend/src/artstyle_backend/schemas/: __init__.py  admin.py  messages.py  tasks.py
backend/src/artstyle_backend/services/: bootstrap.py  retrain_export.py  storage.py  tasks.py  uploads.py
backend/tests/: conftest.py  test_admin_security.py  test_bootstrap.py  test_message_schema.py  test_mlflow_uri.py  test_upload_validation.py
(+25 files in other folders)
